# XAI-in-efficacy-of-immunotherapy

./: .gitignore  Makefile  README.md  STANDARDS.md  data_builder.py  main.py  merge_datasets.py  patient_split_investigation.md  pyproject.toml
configs/: _base.yaml  data_builder_config.yaml
configs/experiments/: DNN_genetic.yaml  WSI_GoogleNet.yaml  WSI_RNA_fused.yaml  cellmorphnet.yaml  huang_mmdl.yaml  lasso_regressor.yaml  random_forest.yaml  shimada_inception_swi.yaml  shimada_inception_wsi.yaml  siamfc_mobile.yaml
cookiecutter-member/: cookiecutter.json
cookiecutter-member/{{cookiecutter.member_name}}/: best_experiment.ipynb
data/: clinical.csv  gdc_manifest.txt  gdc_sample_sheet.tsv  master_patient_splits.csv
data/processed/: stad_clinical_patient_selected.parquet
data/raw/: stad_clinical_patient.parquet  stad_tmb.parquet
explainability_outputs/cellmorphnet_tmb_prediction/: report.csv  report.json
explainability_outputs/dnn_genetic_paper_architicture/: report.csv  report.json
explainability_outputs/pathological_genetic_fused/: report.csv  report.json
explainability_outputs/shimada2021_inception_wsi_replication/: report.csv  report.json
members/layla/: Layla_Model1.ipynb  Layla_Model2.ipynb  Model1.py  Model2.py  layla (1).ipynb  layla.ipynb
members/mourad/EDA/: 2026-04-17_Clinical.ipynb  2026-04-17_EDA-miRNA.ipynb  2026-04-20_EDA-RNA.ipynb
members/mourad/Explanation/: Fused_explanation.ipynb  RNA_DNN_explanation.ipynb  WSI_GoogleNet_explanation.ipynb
members/mourad/data-processing/: 2026-04-17_data-processing.ipynb  2026-05-14_generate-master-splits.ipynb  extract_pathological_features.py
members/mourad/feature-engineering/: 2026-04-17_feature-engineering_clinical.ipynb  2026-04-20_feature-selection_RNA.ipynb  2026-05-17_target-engineering-comparison.ipynb
members/youssef/experiments/CellMorphNet/: 00_preprocessing_eda.ipynb  README.md  cellMorphNet.ipynb
members/youssef/experiments/EDA/: EDA.ipynb
members/youssef/experiments/MultiModal/: multimodal.ipynb
members/youssef/experiments/shimada_2021/: DSAI305_Phase2_v2.ipynb  gdc_sample_sheet.2026-04-17.tsv
research_paper/: ARCHITECTURE_REFERENCE.md  DELIVERY_SUMMARY.txt  FILE_INDEX.md  IMPLEMENTATION_GUIDE.md  README.md  paper.tex  paper_outline.tex
scrapping/: cbio_porta_downloader.py  cbio_portal_downloader.py
src/: config.py  data_loader.py  explainability.py  inference.py  train.py  utils.py
src/models/: __init__.py  cellmorphnet.py  fusion.py  huang_mmdl.py  image.py  late_fusion.py  shimada_inception_swi.py  shimada_inception_wsi.py  tabular.py
src/models/image/: ResNetEncoder.py
src/models/tabular/: DecisionTreeRegressor.py
