[project]
name = "dsai-305-xai"
version = "0.1.0"
description = "Explainable AI — DSAI 305 course project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "openslide-python>=1.4.3",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
]

# ── OPTIONAL DEPENDENCY GROUPS ─────────────────────────────────────────────────
[project.optional-dependencies]

# install via `uv pip install -e ".[dl]"`) when needed.
# Deep-learning stack — uncomment torch above if you pull this in
dl = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "timm>=1.0",                     # Backbone zoo (ViT, MobileNet, EfficientViT…)
    "einops>=0.8",                   # Expressive tensor ops for attention models
]

# FLOPs / latency profiling — requires the dl group to be installed first
profiling = [
    "thop>=0.1.1",                   # torch-op-counter
    "fvcore>=0.1.5",                 # Facebook's FLOP counter (more accurate for some archs)
]

# Developer tooling — one-time install, not needed on every machine
dev = [
    "ruff>=0.15.4",
    "cookiecutter>=2.6.0",
]


# ── ENTRY POINTS ───────────────────────────────────────────────────────────────
[project.scripts]
train-tracker = "src.train:main"
eval-tracker  = "src.inference:main"
submit        = "src.scripts.submit:main"

[project.urls]
Repository = "https://github.com/zerone-team/aic4-tracker"

# ── RUFF CONFIGURATION ─────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 88
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "data",
    # "members",    # uncomment to also ignore member notebooks
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "UP",
    "SIM",
    "TID",
    "RUF",
    "N",
    "PTH",
    "TRY",
    "ERA",
]
ignore = [
    "E501",
    "TRY003",
    "ERA001",
    "N806",
    "N812",
]

fixable   = ["ALL"]
unfixable = []

exclude = [
    ".venv",
    "__pycache__",
    "downloads_valid",
    "downloads_tmp",
    "downloads_bad",
    "logs",
]


[tool.ruff.lint.per-file-ignores]
"members/**"    = ["E402", "F401", "ERA001", "B018"]  # exploratory notebooks
"src/models/**" = ["N806"]                             # tensor dim names
"tests/**"      = ["S101"]                             # assert is fine in tests

[tool.ruff.lint.isort]
known-first-party         = ["src"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"