[project]
name = "dsai-305-xai"
version = "0.1.0"
description = "Explainable AI — DSAI 305 course project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=6.29.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0.80",
    "openslide-python>=1.3.1",
    "pillow>=10.2.0",
    "playwright>=1.40.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "shap>=0.44.0",
    "tensorflow>=2.15.0",
    "tqdm>=4.66.0",
    "wandb>=0.19.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "ruff>=0.15.4",
]

# uv sync --extra dl --extra dev --extra scrapping

[project.optional-dependencies]
# Install via: uv pip install -e ".[dl]"
#dl = [
#    "torch>=2.3.0",
#    "torchvision>=0.18.0",
#    "timm>=1.0",
#    "einops>=0.8",
#]

# to install all optional dependencies: uv pip install -e ".[dl,profiling]"

# FLOPs / latency profiling (requires dl group)
#profiling = [
#    "thop>=0.1.1",
#    "fvcore>=0.1.5",
#]

# Developer tooling
dev = [
    "ruff>=0.4.0",
    "cookiecutter>=2.6.0",
]

#scrapping = [
#    "playwright>=1.40.0",
#    "beautifulsoup4>=4.12.0",
#
#]

[project.scripts]
train-tracker = "src.train:main"
eval-tracker = "src.inference:main"
submit = "src.scripts.submit:main"

[project.urls]
Repository = "https://github.com/DEVOLOPER-1/DSAI_305_XAI"

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "data",
    # "members",  # uncomment to also ignore member notebooks
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "SIM",
    "TID",
    "RUF",
    "N",
    "PTH",
    "TRY",
    "ERA",
]
ignore = [
    "E501",
    "TRY003",
    "ERA001",
    "N806",
    "N812",
]

fixable = ["ALL"]
unfixable = []

exclude = [
    ".venv",
    "__pycache__",
    "downloads_valid",
    "downloads_tmp",
    "downloads_bad",
    "logs",
]

[tool.ruff.lint.per-file-ignores]
"members/**" = ["E402", "F401", "ERA001", "B018"] # exploratory notebooks
"src/models/**" = ["N806"] # tensor dim names
"tests/**" = ["S101"] # assert is fine in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
